Oops, context set to parent dir

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -2,7 +2,7 @@ FROM ruby:3.1.0
 
 # Prepare working directory.
 WORKDIR /ror
-COPY ../ /ror
+COPY ./ /ror
 RUN gem install bundler
 RUN bundle install
 
