--- a/config/blazer.yml
+++ b/config/blazer.yml
@@ -2,7 +2,7 @@
 
 data_sources:
   main:
-    url: <%= ENV["BLAZER_DATABASE_URL"] %>
+    url: postgres://postgres:<%= ENV['POSTGRES_PASSWORD'] %>@database:5432/walltaker
 
     # statement timeout, in seconds
     # none by default
@@ -22,15 +22,15 @@ data_sources:
     # use_transaction: false
 
     smart_variables:
-      # zone_id: "SELECT id, name FROM zones ORDER BY name ASC"
-      # period: ["day", "week", "month"]
-      # status: {0: "Active", 1: "Archived"}
+    # zone_id: "SELECT id, name FROM zones ORDER BY name ASC"
+    # period: ["day", "week", "month"]
+    # status: {0: "Active", 1: "Archived"}
 
     linked_columns:
-      # user_id: "/admin/users/{value}"
+    # user_id: "/admin/users/{value}"
 
     smart_columns:
-      # user_id: "SELECT id, name FROM users WHERE id IN {value}"
+    # user_id: "SELECT id, name FROM users WHERE id IN {value}"
 
 # create audits
 audit: true
