--- a/config/database.yml
+++ b/config/database.yml
@@ -9,12 +9,12 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
-development:
+development: &development
   <<: *default
   adapter: postgresql
   encoding: unicode
   database: walltaker
-  username: local
+  username: toish
   password:
   host: localhost
   port: 5432
@@ -23,8 +23,8 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  <<: *development
+  database: walltaker_test
 
 production:
   <<: *default
