--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ development: &development
   adapter: postgresql
   encoding: unicode
   database: walltaker
-  username: toish
+  username: postgres
   password:
   host: localhost
   port: 5432
