--- a/config/database.yml
+++ b/config/database.yml
@@ -27,11 +27,7 @@ test:
   database: walltaker_test
 
 production:
-  <<: *default
   adapter: postgresql
   encoding: unicode
-  database: walltaker
-  username: <%= ENV['POSTGRES_USER'] %>
-  password: <%= ENV['POSTGRES_PASSWORD'] %>
-  host: database
-  port: 5432
+  timeout: 5000
+  url: <%= ENV['DATABASE_URL'] %>
